Fix spacing in results page header

--- a/src/assets/styling/results-header.scss
+++ b/src/assets/styling/results-header.scss
@@ -1,7 +1,7 @@
 .lls-results-header {
   background-color: $blue--darker;
   color: white;
-  padding: 20px 0;
+  padding: 1.25rem 0 2.25rem;
 }
 
 .lls-results-header__field-label {
@@ -37,7 +37,6 @@
 }
 
 .lls-results-header__history-link {
-  margin-bottom: 1.125rem;
   color: white;
   display: inline-block;
   font-size: 1rem;
